--- a/DV/filtering_shapes_with_loop.html
+++ b/DV/filtering_shapes_with_loop.html
@@ -14,21 +14,39 @@
                 .attr('width',500)
                 .attr('height',500);
 
+ var gtag=mysvg.append('g');
+
+
+ for(i=0;i<10;i++)
+ {
+
+     gtag.append("rect")
+       .attr("x",0)
+       .attr("y",0 )
+       .attr("width",100)
+       .attr("height",50)
+       .attr('transform','translate(200,100) rotate('+(i*10)+')');
+
+ }
 
 
   
-                
 
-  var gtag=mysvg.append('g');
 
-gtag.append("circle")
-  .attr("cx",125)
-  .attr("cy",45 )
-  .attr("r",30)
-  .attr("fill","blue");
+//   firltering shapes
+
+
+gtag.selectAll('rect')
+.filter(':nth-child(even)')
+.attr('fill','blue');
+
+gtag.selectAll('rect')
+.filter(':nth-child(odd)')
+.attr('fill','pink');
+
+
+
+
   
-gtag.attr('transform','translate(100,200)');
-
-
-</script>
-</html>1
+  </script>
+</html>
