--- a/DV/DV/Data_join_svg_shapes.html
+++ b/DV/DV/Data_join_svg_shapes.html
@@ -11,25 +11,32 @@
   <script>
     var mysvg=d3.select('body')
                 .append('svg')
-                .attr('width',500)
-                .attr('height',500);
+                .attr('width',800)
+                .attr('height',800);
 
 
 
   
                 
 
-  var gtag=mysvg.append('g');
+ var mydata=[30,50,25,50,45];
+ d3.select('body').select('svg')
+.selectAll('circle')
+.data(mydata)
+.join('circle')
+.attr('cx',(d,i)=>(i+1)*100)
+.attr('cy',200)
+.attr('r',(d)=>d)
+.attr('fill','orange');
 
-gtag.append("line")
-  .attr("x1",125)
-  .attr("x2",250)
-  .attr("y1",45 )
-  .attr("y2",90)
-  .attr("stroke","black");
-  
-gtag.attr('transform','translate(10,200) rotate(10)  scale(2,2)');
 
-
+d3.select('body').select('svg')
+.selectAll('text')
+.data(mydata)
+.join('text')
+.attr('x',(d,i)=>(i+1)*100-10)
+.attr('y',190)
+.text((d)=>d)
+.attr('fill','blue');
 </script>
 </html>
